Changing the button tag to a tag

--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -18,9 +18,9 @@
     </header>
 
     <main>
-        <button>PLAY</button>
-        <button>CREDITS</button>
-        <button>TUTORIAL</button>
+        <a>PLAY</a>
+        <a>CREDITS</a>
+        <a>TUTORIAL</a>
     </main>
 
 </body>
