creating the pause menu bar

--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -18,9 +18,9 @@
     </header>
 
     <main>
-        <a>PLAY</a>
-        <a>CREDITS</a>
-        <a>TUTORIAL</a>
+        <a href="./game.html">PLAY</a>
+        <a href="./credits.html">CREDITS</a>
+        <a href="./Tutorial.html">TUTORIAL</a>
     </main>
 
 </body>
