creating the game functions

--- a/public/pages/game.html
+++ b/public/pages/game.html
@@ -31,7 +31,7 @@
 
     <main id="game">
 
-        <canvas id="game" width="" height=""></canvas>
+        <canvas id="display" width="600px" height="600px"></canvas>
 
     </main>
 
